# philo2_0

./: CMakeLists.txt  Makefile  bcreate_philos.c  bend.c  bonus_be_alive.c  bonus_init.c  bonus_life_funcs.c  bonus_main.c  bonus_print_status.c  bstart_philos.c  check_args.c  create.c  destroy_mutexes.c  exec.c  exec1.c  free_all.c  init.c  main.c  philo.h  philo_bonus.h  print_status.c  resting.c  sem1.c  текст про бАР
philo/: Makefile  exec1.c  init.c  philo.h  philo_routine.c
philo/utils/: ft_atoi.c  get_time.c  resting.c
philo_bonus/: bend.c  bonus_be_alive.c  bonus_life_funcs.c  bonus_main.c  bonus_print_status.c  philo.h  philo_bonus.h
utils/: ft_atoi.c  get_time.c  print_status.c  resting.c  utils.h
